<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_home"
        android:title="@string/beranda"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_outline_home"
        />
    <item
        android:id="@+id/menu_promo"
        android:title="@string/promo"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_outline_promo"
        />
    <item
        android:id="@+id/menu_nearby"
        android:title="@string/terdekat"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_outline_place"
        />
    <item
        android:id="@+id/menu_akun"
        android:title="@string/profil"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_outline_person"
        />

</menu>