<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GetStartedActivity">

    <ImageView
        android:id="@+id/logo_Nongskuy"
        android:layout_width="125dp"
        android:layout_height="120dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/txt_GetStarted1"
        android:layout_width="301dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/manrope_extrabold"
        android:gravity="center_horizontal"
        android:text="@string/getstarted_title"
        android:textAllCaps="false"
        android:textColor="@color/black"

        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_Nongskuy" />

    <TextView
        android:id="@+id/txt_GetStarted2"
        android:layout_width="301dp"
        android:layout_height="16dp"
        android:layout_marginTop="7dp"
        android:fontFamily="@font/manrope_regular"
        android:gravity="center_horizontal"
        android:text="@string/getstarted_capt"
        android:textAllCaps="false"
        android:textColor="@color/black"

        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_GetStarted1" />

    <ImageView
        android:id="@+id/logo_getStarted"
        android:layout_width="238dp"
        android:layout_height="200dp"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/btn_Daftar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_logo_getstarted" />

    <Button
        android:id="@+id/btn_Daftar"
        android:layout_width="315dp"
        android:layout_height="55dp"
        android:layout_marginBottom="5dp"
        android:text="@string/btn_daftar"
        android:fontFamily="@font/manrope_extrabold"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:background="@drawable/rounded_btn"
        android:shadowColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="315dp"
        android:layout_height="55dp"
        android:layout_marginBottom="50dp"
        android:text="@string/btn_masuk"
        android:fontFamily="@font/manrope_extrabold"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:background="@drawable/rounded_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textAsGuest"
        android:layout_width="50dp"
        android:layout_height="16dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/manrope_bold"
        android:text="@string/get_started_guest"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>