<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageLogo3"
        android:layout_width="125dp"
        android:layout_height="120dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo_nongskuy"
        tools:ignore="ImageContrastCheck" />

    <EditText
        android:id="@+id/inputEmailLogin"
        android:layout_width="315sp"
        android:layout_height="56sp"
        android:layout_marginTop="72dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="12sp"
        android:hint="@string/email"
        android:fontFamily="@font/manrope_regular"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageLogo3"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/inputPasswordLogin"
        android:layout_width="315sp"
        android:layout_height="56sp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPassword"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="12sp"
        android:hint="@string/password"
        android:fontFamily="@font/manrope_regular"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputEmailLogin"
        tools:ignore="SpeakableTextPresentCheck"
        android:importantForAutofill="no" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonLogin"
        android:layout_width="315sp"
        android:layout_height="65sp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/manrope_extrabold"
        android:onClick="toHome"
        android:text="@string/btn_masuk"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:cornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPasswordLogin"
        tools:ignore="OnClick,TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>